Remove lombok dependency from pom.xml. Change project language level to 16. Replace all model classes to record.